cmake_minimum_required(VERSION 3.14)
project(asmutils ASM)

set(TARGET ${PROJECT_NAME}) 

set(CMAKE_ASM_COMPILER /opt/amiga/bin/vasmm68k_mot)
#set(CMAKE_LINKER /opt/amiga/bin/vlink)

set(CMAKE_ASM_FLAGS "-esc -kick1hunks -Fhunk -chklabels -nocase -quiet")
set(CMAKE_ASM_FLAGS_DEBUG "${CMAKE_ASM_FLAGS} -dwarf")
set(CMAKE_ASM_FLAGS_RELEASE "${CMAKE_ASM_FLAGS} -nosym")
set(CMAKE_EXE_LINKER_FLAGS "-b amigahunk -Bstatic -nostdlib")
#set(CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS}")
#set(CMAKE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS} -S -s") 

set(CMAKE_ASM_LINK_EXECUTABLE "${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS} <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
 
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> ${CMAKE_ASM_FLAGS_DEBUG} -o <OBJECT> <SOURCE>")
#	set(CMAKE_ASM_LINK_EXECUTABLE "${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS_DEBUG} <OBJECTS> -o <TARGET> <LINK_LIBRARIES>") 
else()
	set(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> ${CMAKE_ASM_FLAGS_RELEASE} -o <OBJECT> <SOURCE>")
#	set(CMAKE_ASM_LINK_EXECUTABLE "${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS_RELEASE} <OBJECTS> -o <TARGET> <LINK_LIBRARIES>") 
endif(CMAKE_BUILD_TYPE STREQUAL "Debug")

set(SOURCES
	strlen.s
)

#if (CMAKE_BUILD_TYPE STREQUAL  "Debug")
#	set(CMAKE_ASM_LINK_EXECUTABLE "${CMAKE_LINKER} ${CMAKE_EXE_LINKER_FLAGS_DEBUG} <OBJECTS> -o <TARGET> <LINK_LIBRARIES>")
#else()
#	set(CMAKE_ASM_COMPILE_OBJECT "<CMAKE_ASM_COMPILER> ${CMAKE_ASM_FLAGS_RELEASE} -o <OBJECT> <SOURCE>")
#endif(CMAKE_BUILD_TYPE STREQUAL  "Debug") 

# Build as library
add_library(${TARGET} STATIC ${SOURCES}) 
